# jarvis-developer-toolkit

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
src/jdt/: __init__.py  cli.py
src/jdt/analysis/: import_checks.py  manifest_validation.py  static_analysis.py
src/jdt/commands/: deploy.py  init_cmd.py  manifest.py  test.py  validate.py
src/jdt/core/: constants.py  introspect.py  manifest_io.py  manifest_model.py
src/jdt/deploy/: docker.py  local.py  ssh.py
src/jdt/scaffold/: generator.py  templates.py
tests/: conftest.py  test_init.py  test_manifest_model.py  test_static_analysis.py  test_test_cmd.py  test_validate.py
